; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/usb/c67x00/extr_c67x00-ll-hpi.c_hpi_set_bits.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/usb/c67x00/extr_c67x00-ll-hpi.c_hpi_set_bits.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.c67x00_device = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.c67x00_device*, i32, i32)* @hpi_set_bits to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @hpi_set_bits(%struct.c67x00_device* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.c67x00_device*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  store %struct.c67x00_device* %0, %struct.c67x00_device** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %9 = load %struct.c67x00_device*, %struct.c67x00_device** %4, align 8
  %10 = getelementptr inbounds %struct.c67x00_device, %struct.c67x00_device* %9, i32 0, i32 0
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  %12 = load i64, i64* %8, align 8
  %13 = call i32 @spin_lock_irqsave(i32* %11, i64 %12)
  %14 = load %struct.c67x00_device*, %struct.c67x00_device** %4, align 8
  %15 = load i32, i32* %5, align 4
  %16 = call i32 @hpi_read_word_nolock(%struct.c67x00_device* %14, i32 %15)
  store i32 %16, i32* %7, align 4
  %17 = load %struct.c67x00_device*, %struct.c67x00_device** %4, align 8
  %18 = load i32, i32* %5, align 4
  %19 = load i32, i32* %7, align 4
  %20 = load i32, i32* %6, align 4
  %21 = or i32 %19, %20
  %22 = call i32 @hpi_write_word_nolock(%struct.c67x00_device* %17, i32 %18, i32 %21)
  %23 = load %struct.c67x00_device*, %struct.c67x00_device** %4, align 8
  %24 = getelementptr inbounds %struct.c67x00_device, %struct.c67x00_device* %23, i32 0, i32 0
  %25 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %24, i32 0, i32 0
  %26 = load i64, i64* %8, align 8
  %27 = call i32 @spin_unlock_irqrestore(i32* %25, i64 %26)
  ret void
}

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @hpi_read_word_nolock(%struct.c67x00_device*, i32) #1

declare dso_local i32 @hpi_write_word_nolock(%struct.c67x00_device*, i32, i32) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
